[gd_scene load_steps=13 format=3 uid="uid://08iyp8bv2bux"]

[ext_resource type="Script" uid="uid://bnp1d3vki0win" path="res://src/scenes/Game/Levels/Level.gd" id="1_1cp8o"]
[ext_resource type="Script" uid="uid://bd046eokvcnu2" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="2_mx4xg"]
[ext_resource type="Script" uid="uid://bhexx6mj1xv3q" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="3_r6b3h"]
[ext_resource type="Script" uid="uid://8umksf8e80fw" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="4_vgjdh"]
[ext_resource type="Texture2D" uid="uid://dn7dx5rh2rve3" path="res://assets/images/TILESET_SUMMER_DAY.png" id="5_128bx"]
[ext_resource type="PackedScene" uid="uid://ce7fih3ihtd3w" path="res://src/scenes/Game/Components/CollectionZone/CollectionZone.tscn" id="6_w7hj8"]
[ext_resource type="PackedScene" uid="uid://crqrv5lsmuftg" path="res://src/scenes/Game/Components/Cargo/CargoDropper.tscn" id="7_ocfgm"]
[ext_resource type="PackedScene" uid="uid://dopm41dhgind" path="res://src/scenes/Game/Components/Walls/BoundaryWalls.tscn" id="8_gench"]
[ext_resource type="PackedScene" uid="uid://1p2m5d3jdn6i" path="res://src/scenes/Game/PlayerCharacter/PlayerCharacter.tscn" id="9_6ay7r"]

[sub_resource type="Resource" id="Resource_a17mw"]
script = ExtResource("4_vgjdh")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a17mw"]
texture = ExtResource("5_128bx")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0

[sub_resource type="TileSet" id="TileSet_m5ppy"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_a17mw")

[node name="Level" type="Node2D"]
script = ExtResource("1_1cp8o")
maxScore = 5.0

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1, -109)
editor_draw_limits = true

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("2_mx4xg")
metadata/_custom_type_script = "uid://bd046eokvcnu2"

[node name="PhantomCamera2D" type="Node2D" parent="." node_paths=PackedStringArray("follow_targets")]
unique_name_in_owner = true
top_level = true
position = Vector2(-1, -109)
script = ExtResource("3_r6b3h")
priority = 10
follow_mode = 3
follow_targets = [NodePath("../PlayerCharacter/LeftCharacter"), NodePath("../PlayerCharacter/RightCharacter")]
tween_resource = SubResource("Resource_a17mw")
follow_damping = true
draw_limits = true
metadata/_custom_type_script = "uid://bhexx6mj1xv3q"

[node name="Layout" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Layout"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_m5ppy")

[node name="CollectionZoneLeft" parent="Layout" instance=ExtResource("6_w7hj8")]
position = Vector2(-424, -1)

[node name="CollectionZoneRight" parent="Layout" instance=ExtResource("6_w7hj8")]
position = Vector2(425, -3)
zone = 1
neededElement = 1

[node name="CargoDropperLeft" parent="Layout" instance=ExtResource("7_ocfgm")]
position = Vector2(-219, -65)
element = 1

[node name="CargoDropperRight" parent="Layout" instance=ExtResource("7_ocfgm")]
position = Vector2(220, -65)

[node name="BoundaryWalls" parent="Layout" node_paths=PackedStringArray("phantom_camera") instance=ExtResource("8_gench")]
phantom_camera = NodePath("../../PhantomCamera2D")

[node name="RightWall" parent="Layout/BoundaryWalls" index="0"]
position = Vector2(635, 0)

[node name="LeftWall" parent="Layout/BoundaryWalls" index="1"]
position = Vector2(-666, 0)

[node name="Ceiling" parent="Layout/BoundaryWalls" index="2"]
position = Vector2(0, -449)

[node name="Floor" parent="Layout/BoundaryWalls" index="3"]
position = Vector2(0, 438)

[node name="PlayerCharacter" parent="." instance=ExtResource("9_6ay7r")]

[node name="RightPlatformCollider" parent="PlayerCharacter/Platform" index="1"]
position = Vector2(85.318, 47.3304)
rotation = -1.309

[node name="LeftPlatformCollider" parent="PlayerCharacter/Platform" index="2"]
position = Vector2(-84.1886, 47.8134)
rotation = 1.309

[editable path="Layout/BoundaryWalls"]
[editable path="PlayerCharacter"]
